test_regress/t/t_clk_first_bad.out
%Warning-DEPRECATED: t/t_clk_first_deprecated.v:11:14: sc_clock is ignored
   11 |   input clk  /*verilator sc_clock*/;
      |              ^~~~~~~~~~~~~~~~~~~~~~
                     ... For warning description see https://verilator.org/warn/DEPRECATED?v=latest
                     ... Use "/* verilator lint_off DEPRECATED */" and lint_on around source to disable this message.
%Error: Exiting due to
